--- a/Templates/pages/pages/categories.html
+++ b/Templates/pages/pages/categories.html
@@ -9,6 +9,13 @@
         </a>
       </div>
       <div class="title">Categories</div>
+      <div class="right">
+        <home-link>
+        <a href="#" class="home-link">
+          <i class="icon f7-icons arrow-back">arrowshape_turn_up_left</i>
+        </a>
+      </home-link>
+      </div>
     </div>
   </div>
   <div class="page-content">
