--- a/Templates/pages/pages/movie.html
+++ b/Templates/pages/pages/movie.html
@@ -12,11 +12,11 @@
   </div>
   <div class="page-content">
     <div class="movie-header">
-      <img src="img/movies/poster.jpg" alt="" class="movie-cover">
+      <img src="img/albums/cover.jpg" alt="" class="movie-cover">
       <div class="movie-infos">
         <div class="movie-block">
           <i class="icon f7-icons">tickets_fill</i>
-          <div class="movie-block-name">Genre</div>
+          <div class="movie-block-name">bla hjghj</div>
           <div class="movie-block-text">Thriller</div>
         </div>
         <div class="movie-block">
@@ -42,6 +42,7 @@
       offer him a safe haven from the chaos of his home life. As a teenager, Chiron faces peer pressure and tough
       decisions that may determine his future, but with Juan's guidance, he learns to make choices for himself.
     </p>
+
     <a href="#" class="link link-banner link-chevron bg-color-dark bg-color-black netflix-banner">
       <img src="img/icons/netflix.png" alt="">
       <div class="link-banner-text">
@@ -49,7 +50,7 @@
         <div class="link-banner-subtitle">Don't miss this incredible movie!</div>
       </div>
     </a>
-    <h2>Casting</h2>
+    <!-- <h2>Casting</h2>
     <div class="casting">
       <div class="grid grid-cols-4 grid-gap">
         <div>
@@ -305,6 +306,6 @@
       </div>
       <textarea placeholder="Your comment here" id="comment"></textarea>
       <a href="#" class="button button-fill button-round color-dark">Send</a>
-    </form>
+    </form> -->
   </div>
 </div>
